Fix weirdass wrapping in sidebar

--- a/www/assets/style.scss
+++ b/www/assets/style.scss
@@ -20,7 +20,7 @@ body {
     padding: 12px 16px;
     overflow-y: auto;
 
-    width: calc(min($content-width + $sidebar-width, 100%));
+    width: calc(min($WIDTH, 100%));
     gap: 0 32px;
 
     display: flex;
@@ -33,7 +33,7 @@ body {
     display: flex;
     flex-flow: row nowrap;
     align-items: start;
-    gap: 0 1em;
+    justify-content: space-between;
     width: 100%;
 }
 
@@ -41,11 +41,11 @@ body {
     display: flex;
     flex-flow: column nowrap;
     justify-content: start;
-    flex-basis: $sidebar-width;
+    width: $sidebar-width;
 }
 
 #content {
-    flex-basis: $content-width;
+    width: $content-width;
 }
 
 #hamburger {
